parser.output
State 46 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: expression

    2 expression: TOKEN_INT
    3           | TOKEN_STRING
    4           | identifier
    5           | TOKEN_LET identifier TOKEN_EQ expression TOKEN_IN expression
    6           | TOKEN_LAMBDA identifier_list TOKEN_DOT expression
    7           | TOKEN_FUN identifier TOKEN_WITH identifier_list TOKEN_EQ expression TOKEN_IN expression
    8           | TOKEN_IF expression TOKEN_THEN expression TOKEN_ELSE expression
    9           | TOKEN_NIL
   10           | TOKEN_READINT
   11           | TOKEN_READSTRING
   12           | TOKEN_PRINT expression
   13           | expression TOKEN_EQ expression
   14           | expression TOKEN_NEQ expression
   15           | expression TOKEN_LT expression
   16           | expression TOKEN_GT expression
   17           | expression TOKEN_GEQ expression
   18           | expression TOKEN_LEQ expression
   19           | expression TOKEN_OR expression
   20           | expression TOKEN_AND expression
   21           | expression TOKEN_PLUS expression
   22           | expression TOKEN_MINUS expression
   23           | expression TOKEN_TIMES expression
   24           | expression TOKEN_DIVIDE expression
   25           | TOKEN_ISNIL expression
   26           | expression TOKEN_CONS expression
   27           | TOKEN_HD expression
   28           | TOKEN_TL expression
   29           | TOKEN_LPAREN expression_list TOKEN_RPAREN
   30           | TOKEN_ERROR

   31 identifier: TOKEN_IDENTIFIER

   32 expression_list: expression expression_list
   33                | expression expression
   34                | expression

   35 identifier_list: identifier TOKEN_COMMA identifier_list
   36                | identifier


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_READSTRING (258) 11
TOKEN_READINT (259) 10
TOKEN_PRINT (260) 12
TOKEN_ISNIL (261) 25
TOKEN_HD (262) 27
TOKEN_TL (263) 28
TOKEN_CONS (264) 26
TOKEN_NIL (265) 9
TOKEN_DOT (266) 6
TOKEN_WITH (267) 7
TOKEN_LET (268) 5
TOKEN_PLUS (269) 21
TOKEN_MINUS (270) 22
TOKEN_IDENTIFIER (271) 31
TOKEN_TIMES (272) 23
TOKEN_DIVIDE (273) 24
TOKEN_INT (274) 2
TOKEN_LPAREN (275) 29
TOKEN_RPAREN (276) 29
TOKEN_AND (277) 20
TOKEN_OR (278) 19
TOKEN_EQ (279) 5 7 13
TOKEN_NEQ (280) 14
TOKEN_GT (281) 16
TOKEN_GEQ (282) 17
TOKEN_LT (283) 15
TOKEN_LEQ (284) 18
TOKEN_IF (285) 8
TOKEN_THEN (286) 8
TOKEN_ELSE (287) 8
TOKEN_LAMBDA (288) 6
TOKEN_FUN (289) 7
TOKEN_COMMA (290) 35
TOKEN_STRING (291) 3
TOKEN_ERROR (292) 30
TOKEN_IN (293) 5 7
EXPR (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
program (41)
    on left: 1, on right: 0
expression (42)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23 24 25 26 27 28 29 30, on right: 1 5 6 7 8 12 13 14 15 16 17
    18 19 20 21 22 23 24 25 26 27 28 32 33 34
identifier (43)
    on left: 31, on right: 4 5 7 35 36
expression_list (44)
    on left: 32 33 34, on right: 29 32
identifier_list (45)
    on left: 35 36, on right: 6 7 35


State 0

    0 $accept: . program $end

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    program     go to state 17
    expression  go to state 18
    identifier  go to state 19


State 1

   11 expression: TOKEN_READSTRING .

    $default  reduce using rule 11 (expression)


State 2

   10 expression: TOKEN_READINT .

    $default  reduce using rule 10 (expression)


State 3

   12 expression: TOKEN_PRINT . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 20
    identifier  go to state 19


State 4

   25 expression: TOKEN_ISNIL . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 21
    identifier  go to state 19


State 5

   27 expression: TOKEN_HD . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 22
    identifier  go to state 19


State 6

   28 expression: TOKEN_TL . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 23
    identifier  go to state 19


State 7

    9 expression: TOKEN_NIL .

    $default  reduce using rule 9 (expression)


State 8

    5 expression: TOKEN_LET . identifier TOKEN_EQ expression TOKEN_IN expression

    TOKEN_IDENTIFIER  shift, and go to state 9

    identifier  go to state 24


State 9

   31 identifier: TOKEN_IDENTIFIER .

    $default  reduce using rule 31 (identifier)


State 10

    2 expression: TOKEN_INT .

    $default  reduce using rule 2 (expression)


State 11

   29 expression: TOKEN_LPAREN . expression_list TOKEN_RPAREN

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression       go to state 25
    identifier       go to state 19
    expression_list  go to state 26


State 12

    8 expression: TOKEN_IF . expression TOKEN_THEN expression TOKEN_ELSE expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 27
    identifier  go to state 19


State 13

    6 expression: TOKEN_LAMBDA . identifier_list TOKEN_DOT expression

    TOKEN_IDENTIFIER  shift, and go to state 9

    identifier       go to state 28
    identifier_list  go to state 29


State 14

    7 expression: TOKEN_FUN . identifier TOKEN_WITH identifier_list TOKEN_EQ expression TOKEN_IN expression

    TOKEN_IDENTIFIER  shift, and go to state 9

    identifier  go to state 30


State 15

    3 expression: TOKEN_STRING .

    $default  reduce using rule 3 (expression)


State 16

   30 expression: TOKEN_ERROR .

    $default  reduce using rule 30 (expression)


State 17

    0 $accept: program . $end

    $end  shift, and go to state 31


State 18

    1 program: expression .
   13 expression: expression . TOKEN_EQ expression
   14           | expression . TOKEN_NEQ expression
   15           | expression . TOKEN_LT expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   18           | expression . TOKEN_LEQ expression
   19           | expression . TOKEN_OR expression
   20           | expression . TOKEN_AND expression
   21           | expression . TOKEN_PLUS expression
   22           | expression . TOKEN_MINUS expression
   23           | expression . TOKEN_TIMES expression
   24           | expression . TOKEN_DIVIDE expression
   26           | expression . TOKEN_CONS expression

    TOKEN_CONS    shift, and go to state 32
    TOKEN_PLUS    shift, and go to state 33
    TOKEN_MINUS   shift, and go to state 34
    TOKEN_TIMES   shift, and go to state 35
    TOKEN_DIVIDE  shift, and go to state 36
    TOKEN_AND     shift, and go to state 37
    TOKEN_OR      shift, and go to state 38
    TOKEN_EQ      shift, and go to state 39
    TOKEN_NEQ     shift, and go to state 40
    TOKEN_GT      shift, and go to state 41
    TOKEN_GEQ     shift, and go to state 42
    TOKEN_LT      shift, and go to state 43
    TOKEN_LEQ     shift, and go to state 44

    $default  reduce using rule 1 (program)


State 19

    4 expression: identifier .

    $default  reduce using rule 4 (expression)


State 20

   12 expression: TOKEN_PRINT expression .
   13           | expression . TOKEN_EQ expression
   14           | expression . TOKEN_NEQ expression
   15           | expression . TOKEN_LT expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   18           | expression . TOKEN_LEQ expression
   19           | expression . TOKEN_OR expression
   20           | expression . TOKEN_AND expression
   21           | expression . TOKEN_PLUS expression
   22           | expression . TOKEN_MINUS expression
   23           | expression . TOKEN_TIMES expression
   24           | expression . TOKEN_DIVIDE expression
   26           | expression . TOKEN_CONS expression

    TOKEN_CONS    shift, and go to state 32
    TOKEN_PLUS    shift, and go to state 33
    TOKEN_MINUS   shift, and go to state 34
    TOKEN_TIMES   shift, and go to state 35
    TOKEN_DIVIDE  shift, and go to state 36
    TOKEN_AND     shift, and go to state 37
    TOKEN_OR      shift, and go to state 38
    TOKEN_EQ      shift, and go to state 39
    TOKEN_NEQ     shift, and go to state 40
    TOKEN_GT      shift, and go to state 41
    TOKEN_GEQ     shift, and go to state 42
    TOKEN_LT      shift, and go to state 43
    TOKEN_LEQ     shift, and go to state 44

    $default  reduce using rule 12 (expression)


State 21

   13 expression: expression . TOKEN_EQ expression
   14           | expression . TOKEN_NEQ expression
   15           | expression . TOKEN_LT expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   18           | expression . TOKEN_LEQ expression
   19           | expression . TOKEN_OR expression
   20           | expression . TOKEN_AND expression
   21           | expression . TOKEN_PLUS expression
   22           | expression . TOKEN_MINUS expression
   23           | expression . TOKEN_TIMES expression
   24           | expression . TOKEN_DIVIDE expression
   25           | TOKEN_ISNIL expression .
   26           | expression . TOKEN_CONS expression

    TOKEN_CONS  shift, and go to state 32

    $default  reduce using rule 25 (expression)


State 22

   13 expression: expression . TOKEN_EQ expression
   14           | expression . TOKEN_NEQ expression
   15           | expression . TOKEN_LT expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   18           | expression . TOKEN_LEQ expression
   19           | expression . TOKEN_OR expression
   20           | expression . TOKEN_AND expression
   21           | expression . TOKEN_PLUS expression
   22           | expression . TOKEN_MINUS expression
   23           | expression . TOKEN_TIMES expression
   24           | expression . TOKEN_DIVIDE expression
   26           | expression . TOKEN_CONS expression
   27           | TOKEN_HD expression .

    $default  reduce using rule 27 (expression)


State 23

   13 expression: expression . TOKEN_EQ expression
   14           | expression . TOKEN_NEQ expression
   15           | expression . TOKEN_LT expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   18           | expression . TOKEN_LEQ expression
   19           | expression . TOKEN_OR expression
   20           | expression . TOKEN_AND expression
   21           | expression . TOKEN_PLUS expression
   22           | expression . TOKEN_MINUS expression
   23           | expression . TOKEN_TIMES expression
   24           | expression . TOKEN_DIVIDE expression
   26           | expression . TOKEN_CONS expression
   28           | TOKEN_TL expression .

    $default  reduce using rule 28 (expression)


State 24

    5 expression: TOKEN_LET identifier . TOKEN_EQ expression TOKEN_IN expression

    TOKEN_EQ  shift, and go to state 45


State 25

   13 expression: expression . TOKEN_EQ expression
   14           | expression . TOKEN_NEQ expression
   15           | expression . TOKEN_LT expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   18           | expression . TOKEN_LEQ expression
   19           | expression . TOKEN_OR expression
   20           | expression . TOKEN_AND expression
   21           | expression . TOKEN_PLUS expression
   22           | expression . TOKEN_MINUS expression
   23           | expression . TOKEN_TIMES expression
   24           | expression . TOKEN_DIVIDE expression
   26           | expression . TOKEN_CONS expression
   32 expression_list: expression . expression_list
   33                | expression . expression
   34                | expression .

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_CONS        shift, and go to state 32
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_PLUS        shift, and go to state 33
    TOKEN_MINUS       shift, and go to state 34
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_TIMES       shift, and go to state 35
    TOKEN_DIVIDE      shift, and go to state 36
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_AND         shift, and go to state 37
    TOKEN_OR          shift, and go to state 38
    TOKEN_EQ          shift, and go to state 39
    TOKEN_NEQ         shift, and go to state 40
    TOKEN_GT          shift, and go to state 41
    TOKEN_GEQ         shift, and go to state 42
    TOKEN_LT          shift, and go to state 43
    TOKEN_LEQ         shift, and go to state 44
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    $default  reduce using rule 34 (expression_list)

    expression       go to state 46
    identifier       go to state 19
    expression_list  go to state 47


State 26

   29 expression: TOKEN_LPAREN expression_list . TOKEN_RPAREN

    TOKEN_RPAREN  shift, and go to state 48


State 27

    8 expression: TOKEN_IF expression . TOKEN_THEN expression TOKEN_ELSE expression
   13           | expression . TOKEN_EQ expression
   14           | expression . TOKEN_NEQ expression
   15           | expression . TOKEN_LT expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   18           | expression . TOKEN_LEQ expression
   19           | expression . TOKEN_OR expression
   20           | expression . TOKEN_AND expression
   21           | expression . TOKEN_PLUS expression
   22           | expression . TOKEN_MINUS expression
   23           | expression . TOKEN_TIMES expression
   24           | expression . TOKEN_DIVIDE expression
   26           | expression . TOKEN_CONS expression

    TOKEN_CONS    shift, and go to state 32
    TOKEN_PLUS    shift, and go to state 33
    TOKEN_MINUS   shift, and go to state 34
    TOKEN_TIMES   shift, and go to state 35
    TOKEN_DIVIDE  shift, and go to state 36
    TOKEN_AND     shift, and go to state 37
    TOKEN_OR      shift, and go to state 38
    TOKEN_EQ      shift, and go to state 39
    TOKEN_NEQ     shift, and go to state 40
    TOKEN_GT      shift, and go to state 41
    TOKEN_GEQ     shift, and go to state 42
    TOKEN_LT      shift, and go to state 43
    TOKEN_LEQ     shift, and go to state 44
    TOKEN_THEN    shift, and go to state 49


State 28

   35 identifier_list: identifier . TOKEN_COMMA identifier_list
   36                | identifier .

    TOKEN_COMMA  shift, and go to state 50

    $default  reduce using rule 36 (identifier_list)


State 29

    6 expression: TOKEN_LAMBDA identifier_list . TOKEN_DOT expression

    TOKEN_DOT  shift, and go to state 51


State 30

    7 expression: TOKEN_FUN identifier . TOKEN_WITH identifier_list TOKEN_EQ expression TOKEN_IN expression

    TOKEN_WITH  shift, and go to state 52


State 31

    0 $accept: program $end .

    $default  accept


State 32

   26 expression: expression TOKEN_CONS . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 53
    identifier  go to state 19


State 33

   21 expression: expression TOKEN_PLUS . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 54
    identifier  go to state 19


State 34

   22 expression: expression TOKEN_MINUS . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 55
    identifier  go to state 19


State 35

   23 expression: expression TOKEN_TIMES . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 56
    identifier  go to state 19


State 36

   24 expression: expression TOKEN_DIVIDE . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 57
    identifier  go to state 19


State 37

   20 expression: expression TOKEN_AND . expression
